tests/NormalTests/paczka1/small_fuzzy/62435581.err
Error in line 1: gWp9W0XtgVU A978 55,1
Error in line 3: gWp9W0XtgVU S910 17,9
Error in line 11: gWp9W0XtgVU A978 80,2
